--- a/src/sass/libs/_colors.scss
+++ b/src/sass/libs/_colors.scss
@@ -10,7 +10,7 @@ $mainColor5: #977ab3;
 $mainColor6: #2d3538;
 
 $secondaryColor: #FF4369;
-$secondaryColor2: rgb(255, 111, 140);
+$secondaryColor2: #ff6f8c;
 $secondaryColor3: #ff9bbd;
 
 $skin: #ffc095;
