--- a/src/sass/libs/_document.scss
+++ b/src/sass/libs/_document.scss
@@ -83,6 +83,7 @@
   position: relative;
   .document {
     width: 100%;
+    padding-bottom: 50px;
     font-family: 'LMono';
     // height: 100%;
     // padding-bottom: 2rem;
@@ -191,9 +192,9 @@
 
     .document-project-abstract-container {
       display: inline-block;
-      width: 80%;
-      height: 80%;
+      padding: 3em;
       text-align: left;
+      
       .document-project-abstract-content {
         padding: 40px 0;
         width: 100%;
@@ -233,6 +234,71 @@
       z-index: 2;
     }
   }
+
+  .image-dual {
+    grid-column-end: span 1;
+    grid-row-end: span 1;
+    position: relative;
+    min-height: 150px;
+
+    .content-loader {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 2;
+    }
+  }
+
+  .text-long {
+    grid-column-end: span 2;
+    grid-row-end: span 1;
+    text-align: left;
+    line-height: 1.45em;
+    font-size: 1em;
+    font-variation-settings: 'wght' 450, 'wdth' 85;
+  }
+
+  .text-short {
+    grid-column-end: span 1;
+    grid-row-end: span 1;
+    text-align: left;
+    line-height: 1.4em;
+    font-size: 1.1em;
+    font-variation-settings: 'wght' 650, 'wdth' 85;
+  }
+}
+
+.project-image-dual-wrapper{
+  .project-dual-image{
+    position: relative;
+    .project-image-img{
+      display: inline-block;
+      width: 100%;
+    }
+    .project-image-caption{
+      position: absolute;
+      font-family: 'LMono';
+      font-size: 0.8em;
+      font-variation-settings: 'wght' 550, 'wdth' 85;
+      text-align: left;
+      position: absolute;
+      line-height: 1.1em;
+      padding: 3px 4px 3px 3px;
+      opacity: 0;
+      left: 50%;
+      transform: translateX(-50%);
+      transition: all 0.3s ease-in-out;
+      text-align: left;
+    }
+
+    &:hover {
+      .project-image-caption{
+        opacity: 1;
+      }
+    }
+  }
 }
 
 .project-image-wrapper {
@@ -250,7 +316,6 @@
       position: absolute;
       line-height: 1.1em;
       padding: 3px 4px 3px 3px;
-      opacity: 0;
       left: 50%;
       transform: translateX(-50%);
       transition: all 0.3s ease-in-out;
@@ -260,23 +325,60 @@
         font-family: 'LMono';
         margin-bottom: 0.2em;
         font-size: 0.9em;
-        font-variation-settings: 'wght' 850, 'wdth' 95;
-        text-transform: uppercase;
+        font-variation-settings: 'wght' 550, 'wdth' 95;
       }
       .project-image-caption{
         font-family: 'LMono';
         font-size: 0.8em;
-        font-variation-settings: 'wght' 550, 'wdth' 85;
+        font-variation-settings: 'wght' 350, 'wdth' 95;
       }
 
     }
-    &:hover {
-      .project-image-captions{
-        opacity: 1;
+  }
+}
+
+.project-text-wrapper {
+  width: 100%;
+  height: 100%;
+
+  .project-text {
+    padding: 3em;
+    font-family: 'LMono';
+    -webkit-hyphens: auto;
+    -moz-hyphens: auto;
+    -ms-hyphens: auto;
+    hyphens: auto;
+    -webkit-hyphenate-character: '⌁';
+  }
+
+  .project-link {
+    padding: 3em;
+    font-family: 'LMono';
+    text-align: center;
+    -webkit-hyphens: auto;
+    -moz-hyphens: auto;
+    -ms-hyphens: auto;
+    hyphens: auto;
+    font-size: 0.9em;
+    line-height: 1.2em;
+    -webkit-hyphenate-character: '⌁';
+    
+    a {
+      // text-decoration: underline;
+      transition: all 0.1s ease-in-out;
+      font-variation-settings: 'wght' 550, 'wdth' 95;
+
+      &:hover {
+        font-variation-settings: 'wght' 900, 'wdth' 105;
       }
+    }
+    span {
+      text-decoration: none !important;
+      font-size: 0.8em;
     }
   }
 }
+
 .document-illustration {}
 
 
