--- a/assets/fontello-3f481981/css/fontello.css
+++ b/assets/fontello-3f481981/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../fonts/fontello.eot?54880232');
-  src: url('../fonts/fontello.eot?54880232#iefix') format('embedded-opentype'),
-       url('../fonts/fontello.woff2?54880232') format('woff2'),
-       url('../fonts/fontello.woff?54880232') format('woff'),
-       url('../fonts/fontello.ttf?54880232') format('truetype'),
-       url('../fonts/fontello.svg?54880232#fontello') format('svg');
+  src: url('../font/fontello.eot?33576671');
+  src: url('../font/fontello.eot?33576671#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?33576671') format('woff2'),
+       url('../font/fontello.woff?33576671') format('woff'),
+       url('../font/fontello.ttf?33576671') format('truetype'),
+       url('../font/fontello.svg?33576671#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?54880232#fontello') format('svg');
+    src: url('../font/fontello.svg?33576671#fontello') format('svg');
   }
 }
 */
@@ -55,11 +55,16 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
-.icon-search:before { content: '\e800'; } /* '' */
-.icon-phone:before { content: '\e801'; } /* '' */
+.icon-download:before { content: '\e800'; } /* '' */
+.icon-search:before { content: '\e801'; } /* '' */
+.icon-phone:before { content: '\e802'; } /* '' */
+.icon-link:before { content: '\e803'; } /* '' */
+.icon-flash:before { content: '\e804'; } /* '' */
 .icon-twitter:before { content: '\f099'; } /* '' */
 .icon-facebook:before { content: '\f09a'; } /* '' */
 .icon-github:before { content: '\f09b'; } /* '' */
+.icon-linkedin:before { content: '\f0e1'; } /* '' */
 .icon-instagram:before { content: '\f16d'; } /* '' */
 .icon-dribbble:before { content: '\f17d'; } /* '' */
+.icon-codeopen:before { content: '\f1cb'; } /* '' */
 .icon-codepen:before { content: '\f32c'; } /* '' */
