--- a/src/sass/libs/_document.scss
+++ b/src/sass/libs/_document.scss
@@ -81,6 +81,7 @@
 
 #article-content {
   position: relative;
+  z-index: 3;
   .document {
     width: 100%;
     padding-bottom: 50px;
@@ -257,7 +258,7 @@
     text-align: left;
     line-height: 1.45em;
     font-size: 1em;
-    font-variation-settings: 'wght' 450, 'wdth' 85;
+    font-variation-settings: 'wght' 500, 'wdth' 100;
   }
 
   .text-short {
@@ -367,14 +368,19 @@
       // text-decoration: underline;
       transition: all 0.1s ease-in-out;
       font-variation-settings: 'wght' 550, 'wdth' 95;
+      &:after{
+        content: '';
 
+      }
+      
       &:hover {
         font-variation-settings: 'wght' 900, 'wdth' 105;
       }
     }
-    span {
+    p {
       text-decoration: none !important;
-      font-size: 0.8em;
+      font-variation-settings: 'wght' 500, 'wdth' 75;
+      font-size: 0.7em;
     }
   }
 }
