--- a/src/sass/libs/_fonts.scss
+++ b/src/sass/libs/_fonts.scss
@@ -31,8 +31,9 @@
 
 @font-face {
   font-family: 'fontello';
-  src: url('../fonts/fontello.eot?60733903');
-  src: url('../fonts/fontello.ttf?60733903') format('truetype');
+  src: url('../font/fontello.eot?33576671');
+  src: url('../font/fontello.eot?33576671#iefix') format('embedded-opentype'),
+       url('../font/fontello.svg?33576671#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -42,7 +43,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?60733903#fontello') format('svg');
+    src: url('../font/fontello.svg?33576671#fontello') format('svg');
   }
 }
 */
@@ -82,6 +83,16 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
-.icon-flash:before { content: '\e800'; } /* '' */
-.icon-headphones:before { content: '\e801'; } /* '' */
-.icon-certificate:before { content: '\f0a3'; } /* '' */
+.icon-download:before { content: '\e800'; } /* '' */
+.icon-search:before { content: '\e801'; } /* '' */
+.icon-phone:before { content: '\e802'; } /* '' */
+.icon-link:before { content: '\e803'; } /* '' */
+.icon-flash:before { content: '\e804'; } /* '' */
+.icon-twitter:before { content: '\f099'; } /* '' */
+.icon-facebook:before { content: '\f09a'; } /* '' */
+.icon-github:before { content: '\f09b'; } /* '' */
+.icon-linkedin:before { content: '\f0e1'; } /* '' */
+.icon-instagram:before { content: '\f16d'; } /* '' */
+.icon-dribbble:before { content: '\f17d'; } /* '' */
+.icon-codeopen:before { content: '\f1cb'; } /* '' */
+.icon-codepen:before { content: '\f32c'; } /* '' */
