slides & document close button

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -349,7 +349,7 @@ svg:focus {
         letter-spacing: -0.12em;
         font-family: 'eleb';
         text-align: center;
-        color: rgba(50, 41, 52, 0.8);
+        color: rgba(50, 41, 52, 0.87);
         font-size: calc(5vw + 9vh + 6vmin);
         line-height: 1.05em;
         text-shadow: 0 -2px 8px rgba(255, 255, 255, 0.15), 0 -6px 8px rgba(189, 230, 219, 0.6), 0 -3px 2px rgba(202, 249, 255, 0.8), 0 4px 0px #ff7598, 0 -2px 2px rgba(255, 255, 255, 0.5), 0 7px 2px rgba(19, 22, 24, 0.2), 0 8px 8px rgba(255, 67, 105, 0.7), 0 20px 2px rgba(50, 41, 52, 0.3); }
@@ -409,7 +409,7 @@ svg:focus {
       box-shadow: 0 18px 0 0 rgba(50, 41, 52, 0.14);
       width: 33.3%;
       margin-bottom: 46px;
-      border-radius: 3px;
+      border-radius: 2px;
       position: relative;
       overflow: hidden; }
       #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content {
@@ -737,29 +737,31 @@ footer {
     margin-top: -1500px;
     position: absolute;
     background-color: #d8d8d8; }
-  #main-loader .loader-wrapper {
+
+.loader-wrapper {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 100%;
+  height: 100%;
+  transform: translate(-50%, -50%); }
+
+.loader-icon-wrapper {
+  position: absolute;
+  width: 130px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%); }
+  .loader-icon-wrapper .loader-message {
     position: absolute;
-    left: 50%;
-    top: 50%;
-    width: 100%;
-    height: 100%;
-    transform: translate(-50%, -50%); }
-    #main-loader .loader-wrapper .loader-icon {
-      position: absolute;
-      width: 130px;
-      left: 50%;
-      top: 50%;
-      transform: translate(-50%, -50%); }
-      #main-loader .loader-wrapper .loader-icon .loader-hi {
-        position: absolute;
-        right: 32px;
-        top: -16px;
-        width: 20px;
-        line-height: 1.1rem;
-        font-family: 'eleb';
-        font-size: 1.1rem;
-        color: #322934;
-        z-index: -1; }
+    left: 62px;
+    bottom: 46px;
+    width: 20px;
+    line-height: 1.1rem;
+    font-family: 'eleb';
+    font-size: 1.1rem;
+    color: #322934;
+    z-index: -1; }
 
 .loader-visible {
   border-radius: 0% !important;
@@ -768,7 +770,8 @@ footer {
 
 .article-open {
   width: 100% !important;
-  height: 100% !important; }
+  height: 100% !important;
+  transform: translateX(0%) !important; }
 
 .document-label-top {
   top: 0 !important;
@@ -778,44 +781,25 @@ footer {
 
 .document-close {
   position: fixed;
-  right: 0px;
+  right: -2px;
   top: 10vh;
   z-index: 11; }
   .document-close .document-close-container {
-    background-color: #ff6f8c;
-    color: #d2d2d2;
+    border-radius: 2px;
     z-index: 11;
-    width: 70px;
+    width: 50px;
     height: 32px;
-    padding: 4px; }
-    .document-close .document-close-container:after {
-      content: "back";
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      margin-left: 3px;
-      margin-top: 2px;
-      transform: translate(-50%, -50%);
+    padding: 4px;
+    position: relative;
+    box-shadow: 0 4px 0 rgba(50, 41, 52, 0.15); }
+    .document-close .document-close-container .document-close-text {
       font-family: 'eleb';
-      text-transform: uppercase;
-      font-size: 0.65rem;
-      letter-spacing: 0.1rem;
-      transition: 0.1s;
-      color: #d2d2d2; }
-    .document-close .document-close-container .article-close-line {
-      position: absolute;
-      width: 35px;
-      height: 2px;
-      top: 50%;
-      transform: translate(0%, -50%);
-      background-color: #FF4369;
-      transform-origin: 50% 0%;
-      transition: 0.1s; }
-    .document-close .document-close-container .line-one {
-      margin-left: 2px;
-      transform: rotate(45deg); }
-    .document-close .document-close-container .line-two {
-      transform: rotate(-45deg); }
+      text-align: left;
+      -webkit-font-smoothing: antialiased !important;
+      position: relative;
+      height: 32px;
+      transition: 0.1s ease-in;
+      cursor: pointer; }
     .document-close .document-close-container:hover {
       cursor: pointer; }
       .document-close .document-close-container:hover .line-one {
@@ -829,8 +813,29 @@ footer {
         opacity: 1; }
 
 #article-content {
-  position: relative;
-  z-index: 3; }
+  position: fixed;
+  z-index: 3;
+  overflow-y: scroll;
+  transform: translateX(100%);
+  -webkit-transition: all 0.35s cubic-bezier(0.765, 0.005, 0.365, 1);
+  -moz-transition: all 0.35s cubic-bezier(0.765, 0.005, 0.365, 1);
+  -o-transition: all 0.35s cubic-bezier(0.765, 0.005, 0.365, 1);
+  transition: all 0.35s cubic-bezier(0.765, 0.005, 0.365, 1); }
+  #article-content .document-loader-container {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-color: #ffc3d0;
+    opacity: 1;
+    transition: 200ms all ease-out;
+    z-index: 3; }
+    #article-content .document-loader-container .document-loader-wrapper {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 130px;
+      margin-left: -60px;
+      margin-top: -40px; }
   #article-content .document {
     width: 100%;
     padding-bottom: 50px;
@@ -1815,5 +1820,4 @@ a {
   height: 100%; }
 
 .fixScroll {
-  overflow: hidden;
-  height: 0; }
+  transform: translateX(-100%) !important; }
