--- a/src/sass/libs/_colors.scss
+++ b/src/sass/libs/_colors.scss
@@ -12,6 +12,7 @@ $mainColor6: #2d3538;
 $secondaryColor: #FF4369;
 $secondaryColor2: #ff6f8c;
 $secondaryColor3: #ff9bbd;
+$secondaryColor4: #ffc3d0;
 
 $skin: #ffc095;
 
@@ -22,7 +23,7 @@ $thirdColor4: #e6fcff;
 $thirdColor5: #cfffff;
 
 $gray: rgb(243, 243, 243);
-$gray2: rgb(218, 218, 218);
+$gray2: #dadada;
 $backgroundGray: #d2d2d2;
 $backgroundGray2: #e7e7e7;
 $barGray: #707070;
