--- a/src/sass/libs/_document.scss
+++ b/src/sass/libs/_document.scss
@@ -1,6 +1,7 @@
 .article-open {
   width: 100% !important;
   height: 100% !important;
+  transform: translateX(0%) !important;
 }
 
 .document-label-top {
@@ -12,53 +13,27 @@
 
 .document-close {
     position: fixed;
-    right: 0px;
+    right: -2px;
     top: 10vh;
     z-index: 11;
     
     .document-close-container {
-      background-color: $secondaryColor2;
-      color: $backgroundGray;
+      border-radius: 2px;
       z-index: 11;
-      width: 70px;
+      width: 50px;
       height: 32px;
       padding: 4px;
+      position: relative;
+      box-shadow: 0 4px 0 rgba($mainColor4, 0.15);
 
-      &:after {
-        content: "back";
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        margin-left: 3px;
-        margin-top: 2px;
-        transform: translate(-50%, -50%);
+      .document-close-text {
         font-family: 'eleb';
-        text-transform: uppercase;
-        font-size: 0.65rem;
-        letter-spacing: 0.1rem;
-        transition: 0.1s;
-        color: $backgroundGray;
-      }
-
-      .article-close-line {
-        position: absolute;
-        width: 35px;
-        height: 2px;
-        top: 50%;
-        transform: translate(0%, -50%);
-        background-color: $secondaryColor;  
-        transform-origin: 50% 0%;
-        transition: 0.1s;
-      }
-      
-      .line-one {
-        margin-left: 2px;
-        transform: rotate(45deg);
-    
-      }
-      
-      .line-two {
-        transform: rotate(-45deg);
+        text-align: left;
+        -webkit-font-smoothing: antialiased !important;
+        position: relative;
+        height: 32px;
+        transition: 0.1s ease-in;
+        cursor: pointer;
       }
 
     &:hover {
@@ -80,8 +55,34 @@
 }
 
 #article-content {
-  position: relative;
+  position: fixed;
   z-index: 3;
+  overflow-y: scroll;
+  transform: translateX(100%);
+  -webkit-transition: all .35s cubic-bezier(0.765, 0.005, 0.365, 1.000); 
+  -moz-transition: all .35s cubic-bezier(0.765, 0.005, 0.365, 1.000); 
+    -o-transition: all .35s cubic-bezier(0.765, 0.005, 0.365, 1.000); 
+       transition: all .35s cubic-bezier(0.765, 0.005, 0.365, 1.000); 
+
+  .document-loader-container {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-color: $secondaryColor4;
+    opacity: 1;
+    transition: 200ms all ease-out;
+    z-index: 3;
+
+    .document-loader-wrapper {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 130px;
+      margin-left: -60px;
+      margin-top: -40px;
+    }
+  }
+
   .document {
     width: 100%;
     padding-bottom: 50px;
