--- a/src/sass/libs/_loader.scss
+++ b/src/sass/libs/_loader.scss
@@ -21,49 +21,51 @@
     position: absolute;
     background-color: #d8d8d8;
   }
-  
-  .loader-wrapper {
+}
+
+.loader-wrapper {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 100%;
+  height: 100%;
+  transform: translate(-50%, -50%);
+
+}
+
+.loader-icon-wrapper {
+  position: absolute;
+  width: 130px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+
+  .loader-message {
     position: absolute;
-    left: 50%;
-    top: 50%;
-    width: 100%;
-    height: 100%;
-    transform: translate(-50%, -50%);
-
-    .loader-icon {
-      position: absolute;
-      width: 130px;
-      left: 50%;
-      top: 50%;
-      transform: translate(-50%, -50%);
-
-      .loader-hi {
-        position: absolute;
-        right: 32px;
-        top: -16px;
-        width: 20px;
-        line-height: 1.1rem;
-        font-family: 'eleb';
-        font-size: 1.1rem;
-        color: $mainColor4;
-        z-index: -1;
+    left: 62px;
+    bottom: 46px;
+    width: 20px;
+    line-height: 1.1rem;
+    font-family: 'eleb';
+    font-size: 1.1rem;
+    color: $mainColor4;
+    z-index: -1;
+  }
+  
+  svg {
+    #scene {
+      #towel {
       }
-      svg {
-        #scene {
-          #towel {
-          }
-          #umbrella {}
-          #balloon {
-            #body-2 {
-              // transform-origin: 78px 42px;
-              // animation: balloon .5s cubic-bezier(0.215, 0.61, 0.355, 1) infinite alternate;
-            }
-            
-            #shadow-2 {
-              // transform-origin: 82px 38px;
-              // animation: balloonShadow .5s cubic-bezier(0.215, 0.61, 0.355, 1) infinite alternate;
-            }
-          }
+      #umbrella {}
+      #balloon {
+        #body-2 {
+          // transform-origin: 78px 42px;
+          // animation: balloon .5s cubic-bezier(0.215, 0.61, 0.355, 1) infinite alternate;
+        }
+        
+        #shadow-2 {
+          // transform-origin: 82px 38px;
+          // animation: balloonShadow .5s cubic-bezier(0.215, 0.61, 0.355, 1) infinite alternate;
         }
       }
     }
