--- a/src/sass/libs/_colors.scss
+++ b/src/sass/libs/_colors.scss
@@ -34,9 +34,9 @@ $contentBackground: #EAEAEA;
 
 // ---->
 // BAR CONTENT
-$background-bar-color: $thirdColor4;
+$background-bar-color: $thirdColor3;
 $items-colors: $mainColor4;
-$items-colors-over: $secondaryColor;
+$items-colors-over: $secondaryColor2;
 
 // trigger
 $background-bar-trigger-color: $mainColor4;
