--- a/public/css/main.css
+++ b/public/css/main.css
@@ -259,13 +259,13 @@ svg:focus {
     #main-bar .bar-wrapper #bar-menu {
       width: 360px;
       display: inline-block;
-      background: #e6fcff;
+      background: #caf9ff;
       height: 100%;
       padding-top: 0px; }
       #main-bar .bar-wrapper #bar-menu .item-bar-link:hover {
         cursor: pointer; }
       #main-bar .bar-wrapper #bar-menu .main-bar-list {
-        padding: 10px 10px 0px 10px; }
+        padding: 8px 10px 0px 10px; }
         #main-bar .bar-wrapper #bar-menu .main-bar-list .bar-link {
           text-transform: uppercase;
           font-family: 'eleb';
@@ -273,7 +273,7 @@ svg:focus {
           text-decoration: none;
           font-size: 3.6rem;
           color: #322934;
-          line-height: rem;
+          line-height: 1.05em;
           -webkit-hyphens: auto;
           -moz-hyphens: auto;
           -ms-hyphens: auto;
@@ -281,12 +281,12 @@ svg:focus {
           -webkit-hyphenate-character: '⌁'; }
           #main-bar .bar-wrapper #bar-menu .main-bar-list .bar-link:hover {
             cursor: pointer;
-            background: url("/img/noise1.png") #ff4369;
+            background: url("/img/noise1.png") #ff6f8c;
             -webkit-background-clip: text;
             background-clip: text;
             color: transparent; }
       #main-bar .bar-wrapper #bar-menu .secondary-bar-list {
-        padding: 6px 10px 0 10px; }
+        padding: 16px 10px 0 10px; }
         #main-bar .bar-wrapper #bar-menu .secondary-bar-list .bar-link {
           -webkit-hyphens: auto;
           -moz-hyphens: auto;
@@ -306,14 +306,13 @@ svg:focus {
           font-size: 1.1em;
           border: 1px solid transparent;
           margin-bottom: 8px;
-          border-bottom: 1px solid #322934;
           padding: 3px 2px 0.35em 2px;
           line-height: 0.68em; }
           #main-bar .bar-wrapper #bar-menu .secondary-bar-list .bar-link:hover {
             cursor: pointer;
             color: #ff6f8c;
-            border-bottom: 1px solid #FF4369;
-            text-shadow: 0px 0px 2px 1px rgba(255, 67, 105, 0.2); }
+            border-bottom: 1px solid #ff6f8c;
+            text-shadow: 0px 0px 2px 1px rgba(255, 111, 140, 0.2); }
       #main-bar .bar-wrapper #bar-menu .bar-bottom {
         width: 100%;
         height: 100%;
@@ -425,6 +424,7 @@ svg:focus {
           position: absolute;
           bottom: 11px;
           left: 3px;
+          z-index: 5;
           cursor: pointer; }
           #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .article-date-container .article-date {
             opacity: 0.8;
@@ -444,11 +444,12 @@ svg:focus {
           position: absolute;
           top: 0;
           left: 0;
-          z-index: 1; }
+          z-index: 5; }
         #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-container {
           position: absolute;
           width: 100%;
           height: 100%;
+          z-index: 2;
           transition: all 0.4s;
           transform-origin: 0 0;
           transform: translateY(-100%); }
@@ -553,9 +554,8 @@ svg:focus {
                         content: ','; }
                     #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-container .over-article-wrapper .over-article-top .over-article-bottom .over-article-keywords .over-article-keyword:hover .over-article-word {
                       border-bottom: 1px solid #f3f3f6; }
-        #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content img {
+        #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .images-to-load {
           min-height: 200px;
-          transition: all 0.3s ease-out;
           width: 100%; }
       #main-content .main-over-wrapper .main-content-wrapper .grid-item:hover .article-label {
         color: #ff4369; }
@@ -756,7 +756,7 @@ footer {
     position: absolute;
     left: 62px;
     bottom: 46px;
-    width: 20px;
+    width: 60px;
     line-height: 1.1rem;
     font-family: 'eleb';
     font-size: 1.1rem;
@@ -779,20 +779,25 @@ footer {
   margin-top: 40px;
   margin-bottom: 0 !important; }
 
-.document-close {
+#article-closer {
   position: fixed;
-  right: -2px;
-  top: 10vh;
-  z-index: 11; }
-  .document-close .document-close-container {
+  right: -79px;
+  top: 14vh;
+  z-index: 11;
+  transition: 0.3s all cubic-bezier(0.19, 1, 0.22, 1); }
+  #article-closer .document-close-container {
     border-radius: 2px;
     z-index: 11;
-    width: 50px;
-    height: 32px;
+    width: 70px;
+    height: 16px;
     padding: 4px;
     position: relative;
     box-shadow: 0 4px 0 rgba(50, 41, 52, 0.15); }
-    .document-close .document-close-container .document-close-text {
+    #article-closer .document-close-container:hover {
+      background-color: #ff6f8c !important; }
+      #article-closer .document-close-container:hover .document-close-text {
+        padding-left: 14px; }
+    #article-closer .document-close-container .document-close-text {
       font-family: 'eleb';
       text-align: left;
       -webkit-font-smoothing: antialiased !important;
@@ -800,22 +805,12 @@ footer {
       height: 32px;
       transition: 0.1s ease-in;
       cursor: pointer; }
-    .document-close .document-close-container:hover {
-      cursor: pointer; }
-      .document-close .document-close-container:hover .line-one {
-        margin-left: 0px;
-        top: 10%;
-        transform: rotate(0deg); }
-      .document-close .document-close-container:hover .line-two {
-        top: 90%;
-        transform: rotate(0deg); }
-      .document-close .document-close-container:hover:after {
-        opacity: 1; }
 
 #article-content {
   position: fixed;
   z-index: 3;
   overflow-y: scroll;
+  overflow-x: hidden;
   transform: translateX(100%);
   -webkit-transition: all 0.35s cubic-bezier(0.765, 0.005, 0.365, 1);
   -moz-transition: all 0.35s cubic-bezier(0.765, 0.005, 0.365, 1);
