--- a/src/sass/libs/_articles.scss
+++ b/src/sass/libs/_articles.scss
@@ -64,6 +64,7 @@ $width: 33.3%;
             position: absolute;
             bottom: 11px;
             left: 3px;
+            z-index: 5;
             cursor: pointer;
             
             .article-date {
@@ -90,13 +91,14 @@ $width: 33.3%;
             position: absolute;
             top: 0;
             left: 0;
-            z-index: 1;
+            z-index: 5;
           }
 
           .over-article-container {
             position: absolute;
             width: 100%;
             height: 100%;
+            z-index: 2;
             transition: all 0.4s;
             transform-origin: 0 0;
             transform: translateY(-100%);
@@ -257,9 +259,9 @@ $width: 33.3%;
             }
           }
 
-          img {
+          .images-to-load {
             min-height: 200px;
-            transition: all 0.3s ease-out;
+            // transition: all 0.3s ease-out;
             width: 100%;
           }
         }
